'esModuleInterop' 플래그 사용

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,7 @@
         "target": "ES5",
         "module": "CommonJS",
         "experimentalDecorators":true,
+        "esModuleInterop": true,
+
         }
 }
