graphql 버전 수정, 쿼리 타입 에러 해결

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,11 @@
     "compilerOptions": {
         "target": "ES5",
         "module": "CommonJS",
-        "experimentalDecorators":true,
+        "experimentalDecorators": true,
         "esModuleInterop": true,
-
-        }
+        "emitDecoratorMetadata": true,
+    },
+    "exclude": [
+        "node_modules"
+    ]
 }
