--- a/project/web/package.json
+++ b/project/web/package.json
@@ -23,11 +23,23 @@
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@graphql-codegen/cli": "^1.21.8",
+    "@graphql-codegen/typescript": "^1.23.0",
+    "@graphql-codegen/typescript-operations": "^1.18.4",
+    "@graphql-codegen/typescript-react-apollo": "^2.3.1",
+    "@graphql-codegen/add": "^2.0.2",
+    "@types/apollo-upload-client": "^14.1.0",
+    "@types/react-lazyload": "^3.1.1",
+    "@types/react-router-dom": "^5.1.8"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "codegen": "graphql-codegen --config codegen.yml"
+
   },
   "eslintConfig": {
     "extends": "react-app"
