--- a/project/web/package.json
+++ b/project/web/package.json
@@ -15,7 +15,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "framer-motion": "^6.2.9",
-    "graphql": "^16.8.1",
+    "graphql": "^15.7.2y",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^3.0.0",
