--- a/project/web/package.json
+++ b/project/web/package.json
@@ -20,15 +20,16 @@
     "react-dom": "^18.1.0",
     "react-icons": "^3.0.0",
     "react-scripts": "5.0.1",
+    "react-waypoint": "^10.3.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@graphql-codegen/add": "^2.0.2",
     "@graphql-codegen/cli": "^1.21.8",
     "@graphql-codegen/typescript": "^1.23.0",
     "@graphql-codegen/typescript-operations": "^1.18.4",
     "@graphql-codegen/typescript-react-apollo": "^2.3.1",
-    "@graphql-codegen/add": "^2.0.2",
     "@types/apollo-upload-client": "^14.1.0",
     "@types/react-lazyload": "^3.1.1",
     "@types/react-router-dom": "^5.1.8"
@@ -39,7 +40,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "codegen": "graphql-codegen --config codegen.yml"
-
   },
   "eslintConfig": {
     "extends": "react-app"
