--- a/project/web/package.json
+++ b/project/web/package.json
@@ -19,6 +19,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^3.0.0",
+    "react-lazyload": "^3.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-waypoint": "^10.3.0",
@@ -32,7 +33,7 @@
     "@graphql-codegen/typescript-operations": "^1.18.4",
     "@graphql-codegen/typescript-react-apollo": "^2.3.1",
     "@types/apollo-upload-client": "^14.1.0",
-    "@types/react-lazyload": "^3.1.1",
+    "@types/react-lazyload": "^3.2.3",
     "@types/react-router-dom": "5.1.7"
   },
   "scripts": {
