--- a/project/server/package.json
+++ b/project/server/package.json
@@ -13,9 +13,11 @@
     "apollo-server-express": "^3.12.1",
     "express": "^4.18.2",
     "graphql": "^15.3.0",
+    "mysql2": "^3.6.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "type-graphql": "^1.1.1",
+    "typeorm": "^0.3.17",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
