--- a/project/server/package.json
+++ b/project/server/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "apollo-server-core": "^3.12.1",
     "apollo-server-express": "^3.12.1",
+    "argon2": "^0.31.2",
+    "class-validator": "^0.14.0",
     "express": "^4.18.2",
     "graphql": "^15.3.0",
     "mysql2": "^3.6.3",
