--- a/project/web/package.json
+++ b/project/web/package.json
@@ -18,6 +18,7 @@
     "graphql": "^15.7.2y",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^3.0.0",
     "react-lazyload": "^3.2.0",
     "react-router-dom": "^6.18.0",
