--- a/project/server/package.json
+++ b/project/server/package.json
@@ -15,7 +15,9 @@
     "class-validator": "^0.14.0",
     "express": "^4.18.2",
     "graphql": "^15.3.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.3",
+    "nanoid": "^5.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "type-graphql": "^1.1.1",
@@ -23,6 +25,8 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/nanoid": "^3.0.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   }
