--- a/project/server/package.json
+++ b/project/server/package.json
@@ -13,8 +13,10 @@
     "apollo-server-express": "^3.12.1",
     "argon2": "^0.31.2",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "graphql": "^15.3.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.3",
     "nanoid": "^5.0.3",
@@ -25,6 +27,8 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.6",
+    "@types/ioredis": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/nanoid": "^3.0.0",
     "nodemon": "^3.0.1",
