--- a/project/web/package.json
+++ b/project/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.8.7",
+    "@apollo/client": "3.8.7",
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
