--- a/project/web/package.json
+++ b/project/web/package.json
@@ -16,7 +16,7 @@
     "@types/react-dom": "^18.0.4",
     "framer-motion": "^6.2.9",
     "graphql": "^15.7.2y",
-    "react": "^18.1.0",
+    "react": "18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^3.0.0",
@@ -24,7 +24,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-waypoint": "^10.3.0",
-    "typescript": "^4.6.3",
+    "typescript": "4.6.3",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
