--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "experimentalDecorators": true,
         "esModuleInterop": true,
         "emitDecoratorMetadata": true,
+        "strictNullChecks": false,
     },
     "exclude": [
         "node_modules"
