--- a/project/server/package.json
+++ b/project/server/package.json
@@ -14,6 +14,7 @@
     "argon2": "^0.31.2",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "dataloader": "^2.2.2",
     "express": "^4.18.2",
     "graphql": "^15.3.0",
     "ioredis": "^5.3.2",
