--- a/project/server/package.json
+++ b/project/server/package.json
@@ -17,6 +17,7 @@
     "dataloader": "^2.2.2",
     "express": "^4.18.2",
     "graphql": "^15.3.0",
+    "graphql-upload": "^13.0.0",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.3",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
+    "@types/graphql-upload": "^8.0.11",
     "@types/ioredis": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/nanoid": "^3.0.0",
