--- a/project/server/package.json
+++ b/project/server/package.json
@@ -17,6 +17,7 @@
     "dataloader": "^2.2.2",
     "express": "^4.18.2",
     "graphql": "^15.3.0",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-upload": "^13.0.0",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
@@ -24,6 +25,7 @@
     "nanoid": "^5.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "subscriptions-transport-ws": "^0.11.0",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.3.17",
     "typescript": "^5.2.2"
