--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
-    "compilerOptions": {
-        "target": "ES6",
-        "module": "CommonJS",
-        "experimentalDecorators": true,
-        "esModuleInterop": true,
-        "emitDecoratorMetadata": true,
-        "strictNullChecks": false,
-    },
-    "exclude": [
-        "node_modules"
-    ]
+  "compilerOptions": {
+    "lib" : [ "ES2015"],
+    "target": "ES6",
+    "module": "CommonJS",
+    "experimentalDecorators": true,
+    "esModuleInterop": true,
+    "emitDecoratorMetadata": true,
+    "strictNullChecks": false,
+    "moduleDetection": "force"
+  },
+  "exclude": ["node_modules"]
 }
