--- a/project/server/package.json
+++ b/project/server/package.json
@@ -15,6 +15,7 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "dataloader": "^2.2.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^15.3.0",
     "graphql-subscriptions": "^2.0.0",
