--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+memo2.md
+*.zip
 # Created by https://www.toptal.com/developers/gitignore/api/node,react,reactnative
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,react,reactnative
 
