--- a/project/server/package.json
+++ b/project/server/package.json
@@ -1,7 +1,9 @@
 {
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "dev": "nodemon --watch *.ts --exec ts-node src/index.ts"
+    "dev": "nodemon --watch *.ts --exec ts-node src/index.ts",
+    "build": "tsc",
+    "bundle": "zip server.zip -r dist package.json",
+    "start": "node dist/index.js"
   },
   "name": "server",
   "version": "1.0.0",
