--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "esModuleInterop": true,
     "emitDecoratorMetadata": true,
     "strictNullChecks": false,
-    "moduleDetection": "force"
+    "moduleDetection": "force",
+    "jsx": "react",
   },
   "exclude": ["node_modules"]
 }
