--- a/project/server/package.json
+++ b/project/server/package.json
@@ -39,6 +39,7 @@
     "@types/ioredis": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/nanoid": "^3.0.0",
+    "@types/ws": "^8.5.10",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   }
